--- a/Plachta/Client/Components/PlachtaDenView.razor
+++ b/Plachta/Client/Components/PlachtaDenView.razor
@@ -7,11 +7,12 @@
 @implements IDisposable
 
 @inject IJSRuntime JSRuntime
+@inject IModalService Modal
 
 <div class="den">
     <div class="title">
-        @(DniVTyzdni.GetDen((Den.Poradie + Plachtovac.Rozvrh.Zaciatok) % 7)) <br />
-        Veduci
+        <span class="devVTyzdni">@(DniVTyzdni.GetDen((Den.Poradie + Plachtovac.Rozvrh.Zaciatok) % 7))</span> <br />
+        <span class="veduciDna"><span>@Den.Veduci?.Prezyvka</span> <Button @onclick="NastavVeducehoDna" class="btn btn-small btn-primary" style="padding: 0;"><i class="fas fa-edit"></i></Button></span>
     </div>
     <div class="aktivity dropzone"
          @ondragenter="HandleDragEnter"
@@ -47,6 +48,15 @@
         Den.PropertyChanged += DenOnPropertyChanged; ;
     }
 
+    async Task NastavVeducehoDna()
+    {
+        var parameters = new ModalParameters();
+        parameters.Add(nameof(NastavVeducehoDnaForm.Rozvrh), Plachtovac.Rozvrh);
+        parameters.Add(nameof(NastavVeducehoDnaForm.Den), Den);
+        var modal = Modal.Show<NastavVeducehoDnaForm>($"Úprava dňa", parameters);
+        var result = await modal.Result;
+    }
+
     public void Dispose()
     {
         Den.PropertyChanged -= DenOnPropertyChanged;
@@ -55,6 +65,7 @@
 
     private void DenOnPropertyChanged(object sender, PropertyChangedEventArgs e)
     {
+        Console.WriteLine("Prekreslujem den");
         StateHasChanged();
     }
 
@@ -65,6 +76,7 @@
 
     private async Task HandleDrop(DragEventArgs dragEventArgs)
     {
+        if (Plachtovac.SelectedAktivita == null) return;
         var left = ((dragEventArgs.ClientX - denBounding.x - Plachtovac.SelectedAktivita.SelectionOffset) / denBounding.width);
         Plachtovac.Rozvrh.PresunAktivitu(Plachtovac.SelectedAktivita.Aktivita, Den, LeftToTimeSpan(left));
     }
@@ -72,6 +84,11 @@
     private void DragOver(DragEventArgs dragEventArgs)
     {
         dragEventArgs.DataTransfer.DropEffect = "move";
+        if (Plachtovac.SelectedAktivita == null)
+        {
+            _dropAllowed = false;
+            return;
+        }
 
 
         var left = ((dragEventArgs.ClientX - denBounding.x - Plachtovac.SelectedAktivita.SelectionOffset) / denBounding.width);
