--- a/Plachta/Client/Components/RozvrhNastaveniaView.razor
+++ b/Plachta/Client/Components/RozvrhNastaveniaView.razor
@@ -25,7 +25,7 @@
 
 <Field>
     <FieldLabel>Začiatok</FieldLabel>
-    <SelectEdit @bind-SelectedValue="@zaciatok" TValue="int">
+    <Select @bind-SelectedValue="@zaciatok" TValue="int">
         <SelectItem Value="0">Pondelok</SelectItem>
         <SelectItem Value="1">Utorok</SelectItem>
         <SelectItem Value="2">Streda</SelectItem>
@@ -33,7 +33,7 @@
         <SelectItem Value="4">Piatok</SelectItem>
         <SelectItem Value="5">Sobota</SelectItem>
         <SelectItem Value="6">Nedeľa</SelectItem>
-    </SelectEdit>
+    </Select>
 
 </Field>
 
