--- a/Plachta/Client/Components/VeduciAssignForm.razor
+++ b/Plachta/Client/Components/VeduciAssignForm.razor
@@ -5,7 +5,7 @@
 <div class="border" style="width: 350px; max-height: 300px; overflow-y: auto;padding: 5px;">
     @foreach (var veduci in ZoznamVeducich)
     {
-        <CheckEdit @bind-Checked="@veduci.Selected">@veduci.Veduci.Prezyvka</CheckEdit>
+        <Check TValue="bool" @bind-Checked="@veduci.Selected">@veduci.Veduci.Prezyvka</Check>
         @if (veduci.Selected)
         {
             <MemoEdit Rows="3" @bind-Text="@veduci.Poznamka"></MemoEdit>
