--- a/Plachta/Client/Pages/Plachtovac.razor
+++ b/Plachta/Client/Pages/Plachtovac.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/plachtovac"
 @using BlazorContextMenu
 @using Plachta.Shared.BO;
 @using Plachta.Client.Components;
@@ -8,10 +8,11 @@
 @inject IModalService Modal
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 
-<h3>Plachta</h3>
 
 <Button @onclick="SaveData">Save</Button>
 <Button @onclick="LoadData">Load</Button>
+
+<br />
 
 
 <div id="plachtaUi">
