--- a/Plachta/Client/Shared/MainLayout.razor
+++ b/Plachta/Client/Shared/MainLayout.razor
@@ -1,5 +1,8 @@
 ﻿@inherits LayoutComponentBase
-
-@Body
-
+<div class="main">
+    <NavMenu></NavMenu>
+    <div class="content px-4">
+        @Body
+    </div>
+</div>
 <BlazoredModal />
